# czi-conda-forge-db

./: .gitignore  README.md  environment.yaml  main.py  pyproject.toml  schema.py  setup.py
.github/actions/build-conda-env/: action.yaml
.github/workflows/: build_db.yaml  pytest.yaml
cfdb/: __main__.py  main.py
cfdb/harverst/: __init__.py  preloader.py  utils.py
cfdb/log/: setup.py
cfdb/models/: schema.py
cfdb/populate/: artifacts.py  feedstock_outputs.py  import_to_package_maps.py  utils.py
cfdb/tests/: test_schema.py
legacy/: feedstock_outputs.py  import_to_package.py
log/: __init__.py  setup.py
populate/: artifacts.py  feedstock_outputs.py  utils.py
tests/integration/: fixtures.py
tests/unitests/: test_log_setup.py  test_populate_feedstock_outputs.py  test_populate_utils.py  test_schema.py
